# 20MinutesTillSunrise-raylib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  start.bat
src/: main.cpp  movementController.hpp  pch.h  renderer.hpp  utils.hpp
src/backup/: Entities.h  Game.h  Source.cpp
